<resources>
    <string name="app_name">Battleship</string>
    <string name="new_game">New Game</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="no_save">Don´t save</string>
    <string name="language">Language</string>
    <string name="difficulty">Difficulty</string>
    <string name="rules">Rules</string>
    <string name="allow_adjacent_ships">Allow adjacent ships</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="barra">\\</string>
    <string name="carrier5">Carrier (5 squares)</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="language_options_reverso">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string-array name="difficulty_options">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="rules_options">
        <item>Classic</item>
        <item>Supershots</item>
    </string-array>
    <string-array name="ship_types">
        <item>Carrier (5 squares)</item>
        <item>Battleship (4 squares)</item>
        <item>Cruiser (3 squares)</item>
        <item>Submarine (3 squares)</item>
        <item>Destroyer (2 squares)</item>
    </string-array>
    <string name="place_your_ships">Place your ships!</string>
    <string name="start_game">Start Game</string>
    <string name="info">Info</string>
    <string name="howto">How to place the ships</string>
    <string name="information_rules">
    Game modes: \n\n1. Classic\nEach player can shot one square at time. Turn changes unless the player hit a ship. The player with ship still afloat.
    \n\n2. Supershots\nSame game mode as Classic, with the difference that ships sink with a single shot.
    </string>
    <string name="back_pressed">Back key pressed. Are you sure you don´t want to save the settings?</string>
    <string name="noship">The ship is not correctly placed. \n\n The squares must be consecutive and oriented in only one direction.</string>
    <string name="reset">Reset ship</string>
    <string name="deleteconf">Delete board\'s configuration?</string>
    <string name="placeshipfirst">Place the ship before continue with another one.</string>
    <string name="placeallships">You didn\'t place all the ships on the board.</string>
    <string name="doit">Do it.</string>
    <string name="shipof">"Ship of "</string>
    <string name="squares">" squares"</string>
    <string name="gamesmodes">Games modes</string>
    <string name="shipinfo">To place your ships touch the images and then select the squares where you want to place the ship. \n\n Select as many squares as indicated when touching the ship.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="pulsame">Click me!</string>
    <string name="resetgamesure">Are you sure you want to leave the current game?</string>
    <string name="resetinggame">You are trying to reset the game.</string>
    <string name="noadjacent">Adjacent ships are not allowed. Place them separated between each other.</string>
    <string name="another">Ship already placed. Select another one.</string>
    <string name="fuun">Click \'Start Game\' and start the battle!!</string>
    <string name="aboutBattleship">Project developed for Programming of Intelligent Systems subject. \n\nTelecommunications Engineering degree. \n\nUniversity of Vigo 2016/17.\n\nWe use Google GSON library under Apache-2.0 license.\n\n     v1.0.1</string>
    <string name="instructions">Game instructions</string>
    <string name="gameturns">You play first! \nThe traffic light will be green when it is your turn and red when it is the opponent\'s turn. \nYou can see the opponent\'s boats that you have sunk in the images with a red cross in the upper left corner. \n\nMake the first shot and start the game!</string>
    <string name="endgame">END GAME!!</string>
    <string name="youwin">You win the game!!\n\n\t\t :)</string>
    <string name="youlose">You lose the game… \n\n\t\t :(</string>

</resources>
