<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/water1">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="24dp"
        android:textColor="@color/ColorWhite"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_text"
        android:layout_marginTop="26dp"
        android:layout_toStartOf="@+id/back_settings"
        android:padding="16dp"
        android:textColor="@color/ColorWhite"
        android:text="@string/difficulty"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/difficulty_text"
        android:layout_below="@+id/difficulty_text"
        android:layout_marginTop="40dp"
        android:textColor="@color/ColorWhite"
        android:padding="16dp"
        android:text="@string/language"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ships_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ColorWhite"
        android:layout_alignStart="@+id/language_text"
        android:layout_below="@+id/language_text"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/allow_adjacent_ships"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rules_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_settings"
        android:layout_alignStart="@+id/language_text"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/ColorWhite"
        android:padding="16dp"
        android:text="@string/rules"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/rules_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_settings"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/rules_text"
        android:layout_marginBottom="36dp"
        android:textSize="17sp" />

    <Button
        android:id="@+id/back_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:text="@string/save"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/language_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ships_text"
        android:layout_marginStart="200dp"
        android:layout_alignTop="@+id/language_text"
        android:textSize="17sp" />

    <Spinner
        android:id="@+id/difficulty_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/language_text"
        android:layout_alignTop="@+id/difficulty_text"
        android:layout_marginStart="200dp"
        android:padding="16dp"
        android:textSize="17sp" />

    <Switch
        android:id="@+id/switch_ships"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ships_text"
        android:layout_alignBottom="@+id/ships_text"
        android:layout_toEndOf="@+id/back_settings"
        android:padding="16dp" />

    <ImageButton
        android:src="@android:drawable/ic_menu_view"
        android:id="@+id/log"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/difficulty_options"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="39dp" />

    <ImageButton
        android:layout_width="35dp"
        android:src="@android:drawable/ic_dialog_info"
        android:id="@+id/info"
        android:background="@color/ColorWater"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/rules_text"
        android:layout_toEndOf="@+id/rules_text"
        android:layout_marginTop="8dp" />


</RelativeLayout>